# mcutils

./: .clang-tidy  CMakeLists.txt  CMakePresets.json  Dockerfile  Doxyfile  Jenkinsfile.linux  Jenkinsfile.win  LICENSE  README.md  vcpkg.json
.devcontainer/: devcontainer.json
include/mcutils/: CMakeLists.txt  Result.h  doxygen.h  extra_units.h  units.h
include/mcutils/data/: CMakeLists.txt  DataPathUtils.h  DataRef.h  DataTree.h  GroupNode.h  ValueNode.h
include/mcutils/geo/: Geo.h  WGS84.h
include/mcutils/log/: LoggerBase.h
include/mcutils/math/: DegMinSec.h  EulerRect.h  GaussJordan.h  MathUtils.h  Matrix.h  Matrix3x3.h  MatrixMxN.h  MatrixNxN.h  Quaternion.h  RotMatrix.h  RungeKutta4.h  SegPlaneIsect.h  StatsUtils.h  Table.h  Table2.h  Vector.h  Vector3.h  VectorN.h
include/mcutils/misc/: Check.h  StringUtils.h
include/mcutils/physics/: FirstOrderInertia.h  Inertia.h  InertiaTensors.h  PhysicsUtils.h  UnitsUtils.h
include/mcutils/time/: ClockTime.h  DateTime.h  ISO8601.h  Timer.h
include/mcutils/xml/: XmlUtils.h
src/: CMakeLists.txt
src/data/: CMakeLists.txt  DataPathUtils.cpp  DataTree.cpp  GroupNode.cpp
src/geo/: CMakeLists.txt  ECEF.cpp  Ellipsoid.cpp  Mercator.cpp
src/log/: CMakeLists.txt  Log.cpp  StreamLogger.cpp
src/math/: Angles.cpp  CMakeLists.txt  DegMinSec.cpp  Matrix.cpp  Quaternion.cpp  RotMatrix.cpp  Vector.cpp
src/mcutils/: CMakeLists.txt  Result.h  doxygen.h  extra_units.h  mcutils_api.h
src/mcutils/data/: ConstDataRef.h  DataPathUtils.cpp  GroupNode.h  Node.h
src/mcutils/geo/: ECEF.h  Ellipsoid.h  Mars2015.h  Mercator.h
src/mcutils/log/: CMakeLists.txt  ILogger.h  Log.h  StreamLogger.h  SysLogger.cpp  SysLogger.h  VerboseLevel.h
src/mcutils/math/: Angles.cpp  Angles.h  CMakeLists.txt  DegMinSec.cpp  DegMinSec.h  EulerRect.h  GaussJordan.h  MathUtils.h  Matrix.cpp  Matrix.h  Matrix3x3.h  MatrixMxN.h  MatrixNxN.h  Quaternion.cpp  Quaternion.h  RotMatrix.cpp  RotMatrix.h  RungeKutta4.h  SegPlaneIsect.h  StatsUtils.h  Table.h  Table2.h  Vector.cpp  Vector.h  Vector3.h  VectorN.h
src/mcutils/misc/: CMakeLists.txt  Check.h  StringUtils.cpp  StringUtils.h
src/mcutils/physics/: Inertia.h  UnitsUtils.cpp  UnitsUtils.h
src/mcutils/time/: CMakeLists.txt
src/mcutils/xml/: XmlDoc.h  XmlNode.h  XmlUtils.h
src/misc/: CMakeLists.txt  StringUtils.cpp
src/physics/: CMakeLists.txt  UnitsUtils.cpp
src/xml/: CMakeLists.txt  XmlDoc.cpp  XmlNode.cpp  XmlUtils.cpp
tests/: CMakeLists.txt  CsvFileReader.cpp  CsvFileReader.h  DiffEquationSolver.h  TestUnits.cpp  XcosBinFileReader.cpp  XcosBinFileReader.h
tests/data/: CMakeLists.txt  TestConstDataRef.cpp  TestDataPathUtils.cpp  TestDataRef.cpp  TestDataTree.cpp  TestGroupNode.cpp  TestNode.cpp  TestValueNode.cpp
tests/geo/: CMakeLists.txt  TestECEF.cpp  TestEllipsoid.cpp  TestMercator.cpp
tests/geo/python/: test_geo_ecef.py  test_geo_mercator.py
tests/log/: CMakeLists.txt  TestLog.cpp  TestStreamLogger.cpp  TestSysLogger.cpp
tests/math/: CMakeLists.txt  TestAngles.cpp  TestDegMinSec.cpp  TestEulerRect.cpp  TestGaussJordan.cpp  TestMathUtils.cpp  TestMatrix3x3.cpp  TestMatrix3x3WithUnits.cpp  TestMatrixMxN.cpp  TestMatrixMxNWithUnits.cpp  TestMatrixNxN.cpp  TestMatrixNxNWithUnits.cpp  TestQuaternion.cpp  TestRotMatrix.cpp  TestRungeKutta4.cpp  TestSegPlaneIsect.cpp  TestTable.cpp  TestTable2.cpp  TestVector3.cpp  TestVector3WithUnits.cpp  TestVectorN.cpp  TestVectorNWithUnits.cpp
tests/math/octave/: test_math_stat.m  test_matrix.m  test_matrix4x4.m  test_matrix6x6.m  test_quaternion.m  test_rot_matrix.m  test_vector.m  test_vector3.m  test_vector3_cross_product.m  test_vector3_dot_product.m  test_vector4.m  test_vector6.m
tests/math/python/: test_math_stat.py  test_math_utils.py  test_matrix.py  test_matrix4x4.py  test_matrix6x6.py  test_quaternion.py  test_rot_matrix.py  test_vector.py  test_vector3.py  test_vector4.py  test_vector6.py
tests/misc/: CMakeLists.txt  TestCheck.cpp  TestStringUtils.cpp
tests/physics/: CMakeLists.txt  TestFirstOrderInertia.cpp  TestInertia.cpp  TestInsertiaTensors.cpp  TestPhysicsUtils.cpp  TestUnitsUtils.cpp
tests/physics/python/: .gitignore  cube_1x1x1.stl  cylinder_r_1_h_1.stl  python_venv_create.sh  sphere_r_1.stl  test_inertia_tensors.py
tests/physics/xcos/: test_inertia.xcos
tests/time/: CMakeLists.txt  TestClockTime.cpp  TestISO8601.cpp
tests/units/: CMakeLists.txt  TestUnits.cpp
tests/xml/: CMakeLists.txt  TestXmlDoc.cpp  TestXmlNode.cpp  TestXmlUtils.cpp
tests/xml/data/: test_xml_sample_data.xml  test_xml_sample_data_no_children.xml  test_xml_sample_data_values.xml
utils/: .gitignore  generate_coverage-report.py  lcov_exclude.txt  run_checks.py  run_tests.py
